--- a/EOY API/appsettings.json
+++ b/EOY API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultSQLConnection": "Server=localhost;Database=EOY;Trusted_Connection=True;MultipleActiveResultSets=true"
+    
+  }
 }
