--- a/EOY API/appsettings.json
+++ b/EOY API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultSQLConnection": "Server=localhost;Database=EOY;Trusted_Connection=True;MultipleActiveResultSets=true"
-    
+    "DefaultSQLConnection": "Server=localhost;Database=EOY;User Id=eoyer;Password=eoyer123;Encrypt=False"
+
   }
 }
